[tool.poetry]
name = "depthmap-generator"
version = "0.1.0"
description = "DEpthmap evaluation from pictures with MiDaS"
authors = ["Didier Bröska <didier.broska@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
safety = "^1.10.3"
mypy = "^0.812"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = "tests/"

[tool.isort]
profile = "black"
include_trailing_comma="True"
force_grid_wrap="0"
use_parentheses="True"
line_length="79"

[tool.black]
line-length="79"
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''